@@ -1,3 +1,8 @@
+2005-06-12  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-metadata-musicbrainz.c:
+	Write MusicBrainz identifiers as IDs not URLs.
+
 2005-06-09  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-structures.c:
